# baseload-demand

./: README.md  Snakefile  environment.yml  pyproject.toml
config/: run_1_node.yaml
data/: loadpvwind8.csv  yacemod_basic_input_ceepr_paper_2020.xlsx
scripts/: baseload_analysis.py  create_1_node_empire_system.py  elhub.py  figures.py
