[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "empire_profitability"
version = "0.1.0"
description = "EMPIRE Profitability."
authors = ["Martin Hjelmeland <martin.hjelmeland@ntnu.no>"]
maintainers = ["Martin Hjelmeland <martin.hjelmeland@ntnu.no>"]
readme = "README.md"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.poetry.dependencies]
python = ">=3.7"
cloudpickle = ">=1.0.0"
openpyxl = ">=3.0.0"
pandas = ">=1.2"
pyomo = ">=6.0"
pyyaml = ">=5.1"
